# commit-gen

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
dev/: build.sh  format.sh  lint.sh  typecheck.sh  watch.sh
src/: app.py
src/common/: arguments.py  base.py  config.py  console.py  doctor.py  errors.py  format_markdown.py  http_response.py  json.py  json_parser.py  loading.py  prompts.py  reflection.py  result.py  updater.py
src/common/command/: base_command.py  base_command_handler.py  execute_command_handler.py
src/domains/commit/command/: commit.py
src/domains/setup/command/: setup.py
src/domains/translate/aggregate/: translate.py
src/domains/translate/command/: translate.py
tests/: test_arguments.py
