[project]
name = "quick-assistant"
version = "0.0.0"
description = "Global CLI tool for productivity - quick translate, document extraction, and search operations."
authors = [{ name = "Rafael Ricco", email = "rafaelricco10@gmail.com" }]
readme = "README.md"
license = "MIT"

requires-python = ">=3.11"

dependencies = [
    "google-genai>=1.26.0",
    "pydantic>=2.11.7",
    "questionary>=2.0.0",
    "requests>=2.31.0",
    "charset-normalizer>=3.0.0",
    "rich>=14.0.0",
    "python-dotenv>=1.1.1",
    "packaging>=24.0",
]

[project.urls]
Homepage = "https://github.com/rafaeelricco/quick-assistant"
Repository = "https://github.com/rafaeelricco/quick-assistant"

[project.scripts]
quick = "app:main"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "quick-assistant",
    "ruff>=0.12.4",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
quick-assistant = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.mypy]
mypy_path = "src"
packages = ["common", "domains", "app"]
explicit_package_bases = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
upload_to_pypi = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
